<resources>
    <string name="OpenChannelProfile">Channel info</string>
    <string name="GoToFirstMessage">Go to First Message</string>
    <string name="DeleteContacts">Delete Contacts</string>
    <string name="DeleteContactPlaceholder">Delete contacts...</string>
    <string name="hockeyapp_app_id">9594147f25d045bd90e084e879dc01cd</string>
    <string name="CacheSettings">Cache Settings</string>
    <string name="PermissionContacts">shangoolgram needs access to your contacts so that you can connect with your friends across all your devices.</string>
    <string name="PermissionStorage">shangoolgram needs access to your storage so that you can send and save photos, videos, music and other media.</string>
    <string name="PermissionNoAudio">shangoolgram needs access to your microphone so that you can send voice messages.</string>
    <string name="PermissionNoLocation">shangoolgram needs access to your location so that you can share it with your friends.</string>
    <string name="PermissionOpenSettings">SETTINGS</string>
    <string name="Page1Title">shangoolgram</string>
    <string name="Page2Title">Fast</string>
    <string name="Page3Title">Free</string>
    <string name="Page4Title">Secure</string>
    <string name="Page5Title">Powerful</string>
    <string name="Page6Title">Cloud-Based</string>
    <string name="Page7Title">Private</string>
    <string name="Page1Message">The world\'s <![CDATA[<b>fastest</b>]]> messaging app.<![CDATA[<br/>]]>It is <![CDATA[<b>free</b>]]> and <![CDATA[<b>secure</b>]]>.<![CDATA[<br/>]]>And also <![CDATA[<b>themeable</b>]]>! </string>
    <string name="Page2Message"><![CDATA[<b>shangoolgram</b>]]> delivers messages faster than<![CDATA[<br/>]]>any other application.</string>
    <string name="Page3Message"><![CDATA[<b>shangoolgram</b>]]> is free forever.</string>
    <string name="Page4Message"><![CDATA[<b>shangoolgram</b>]]> keeps your messages safe<![CDATA[<br/>]]>from hacker attacks.</string>
    <string name="Page5Message"><![CDATA[<b>shangoolgram</b>]]> has no limits on the size of<![CDATA[<br/>]]>your media and chats.</string>
    <string name="Page6Message"><![CDATA[<b>shangoolgram</b>]]> lets you access your messages<![CDATA[<br/>]]>from multiple devices.</string>
    <string name="Page7Message"><![CDATA[<b>shangoolgram</b>]]> messages are heavily encrypted<![CDATA[<br/>]]>and can self-destruct.</string>
    <string name="StartMessaging">Start Messaging</string>
    <string name="items_few">%1$d items</string>
    <string name="formatterMonthYear">MMMM yyyy</string>
    <string name="formatterMonth">MMM dd</string>
    <string name="formatterYear">dd.MM.yy</string>
    <string name="formatterYearMax">dd.MM.yyyy</string>
    <string name="chatDate">MMMM d</string>
    <string name="chatFullDate">MMMM d, yyyy</string>
    <string name="formatterWeek">EEE</string>
    <string name="formatterDay24H">HH:mm</string>
    <string name="formatterDay12H">h:mm a</string>
    <string name="formatDateAtTime">%1$s at %2$s</string>
    <string name="TelegramForAndroid">shangoolgram Messenger for Android</string>
    <string name="Theming">Theme factory</string>
    <string name="PlusSettings">shangoolgram Settings</string>
    <string name="colorHexInvalid">Invalid color hex code!</string>
    <string name="themeColor">Theme color</string>
    <string name="ResetThemeSettings">Reset theme settings</string>
    <string name="ResetThemeSettingsSum">Undo all theme settings</string>
    <string name="ResetThemeToastText">Reset theme settings to default!</string>
    <string name="Screens">Screens</string>
    <string name="MainScreen">Main screen</string>
    <string name="ChatScreen">Chat screen</string>
    <string name="ContactsScreen">Contacts screen</string>
    <string name="Header">Header</string>
    <string name="ChatList">Chat list</string>
    <string name="ChatsList">Chats list</string>
    <string name="ContactsList">Contacts list</string>
    <string name="HeaderColor">Header color</string>
    <string name="NameColor">Name color</string>
    <string name="NameSize">Name size</string>
    <string name="MessageColor">Message color</string>
    <string name="MessageSize">Message size</string>
    <string name="TimeDateColor">Time/Date color</string>
    <string name="TimeDateSize">Time/Date size</string>
    <string name="CountColor">Count color</string>
    <string name="CountSize">Count size</string>
    <string name="RowColor">Row color</string>
    <string name="CountBGColor">Count background color</string>
    <string name="StatusColor">Status color</string>
    <string name="StatusSize">Status size</string>
    <string name="RBubbleColor">Right bubble color</string>
    <string name="LBubbleColor">Left bubble color</string>
    <string name="DateColor">Date color</string>
    <string name="DateSize">Date size</string>
    <string name="DateBubbleColor">Date bubble color</string>
    <string name="RTextColor">Right text color</string>
    <string name="LTextColor">Left text color</string>
    <string name="RTimeColor">Right time color</string>
    <string name="LTimeColor">Left time color</string>
    <string name="TimeSize">Time size</string>
    <string name="EditTextColor">Text input color</string>
    <string name="EditTextSize">Text input size</string>
    <string name="EditTextBGColor">Text input background color</string>
    <string name="EmojiViewBGColor">Emoji background color</string>
    <string name="EmojiViewTabColor">Emoji selected tab color</string>
    <string name="EmojiViewTabIconColor">Emoji tab icon color</string>
    <string name="OnlineColor">Online color</string>
    <string name="SaveThemeSum">Save your theme to shangoolgram/Themes folder</string>
    <string name="SavedTo">%1$s saved to %2$s</string>
    <string name="SavedToCloud">Message saved in your cloud</string>
    <string name="SaveErrorMsg0">Theme not created yet. Apply any MOD first, please</string>
    <string name="restoreErrorMsg">No preferences file found in %s</string>
    <string name="NoMediaMessage">No SD card found.</string>
    <string name="EnterName">Enter name</string>
    <string name="Themes">Themes</string>
    <string name="ApplyThemeSum">Apply xml theme from local folder</string>
    <string name="MemberColor">Member color</string>
    <string name="ChecksColor">Ticks color</string>
    <string name="MuteColor">Mute color</string>
    <string name="SendLogsEmpty">There aren\'t logs</string>
    <string name="SendIcon">Send Icon</string>
    <string name="HideMobile">Hide mobile number from menu</string>
    <string name="FloatingPencilColor">Floating pencil color</string>
    <string name="FloatingBGColor">Floating background color</string>
    <string name="TypingColor">Typing color</string>
    <string name="EditTextIconsColor">Text input icons color</string>
    <string name="NavigationDrawer">Navigation drawer</string>
    <string name="OptionsList">Options list</string>
    <string name="ListColor">List color</string>
    <string name="OwnNameSize">Name size</string>
    <string name="PhoneColor">Phone color</string>
    <string name="PhoneSize">Phone size</string>
    <string name="AvatarColor">Avatar color</string>
    <string name="IconColor">Option icon color</string>
    <string name="OptionColor">Option color</string>
    <string name="OptionSize">Option size</string>
    <string name="VersionColor">Version color</string>
    <string name="VersionSize">Version size</string>
    <string name="HeaderTitleColor">Header title color</string>
    <string name="HeaderIconsColor">Header icons color</string>
    <string name="DividerColor">Divider color</string>
    <string name="AvatarRadius">Avatar radius</string>
    <string name="SetMemberColor">Set member color</string>
    <string name="HeaderTitle">Header title</string>
    <string name="ForwardNoQuote">Forward without quoting</string>
    <string name="DisableMessageClick">Disable pop-up on click</string>
    <string name="ProfileScreen">Group/Contact Profile</string>
    <string name="HideBackground">Hide custom background</string>
    <string name="RLinkColor">Right link color</string>
    <string name="LLinkColor">Left link color</string>
    <string name="ThemeApplied">Theme applied!</string>
    <string name="ClickOkToRestart">Click OK to restart app</string>
    <string name="ShowAndroidEmoji">Show phone emoji</string>
    <string name="BubbleStyle">Bubble style</string>
    <string name="KeepOriginalFilename">Keep original filename</string>
    <string name="KeepOriginalFilenameHelp">Instead of just numbers files will be saved using name_date format</string>
    <string name="AvatarSize">Avatar size</string>
    <string name="AvatarAlignTop">Align contact avatar to top</string>
    <string name="AvatarMarginLeft">Avatar margin</string>
    <string name="GroupNameColor">Group name color</string>
    <string name="GroupNameSize">Group name size</string>
    <string name="UnknownNameColor">Name color (unknown number)</string>
    <string name="HideBackgroundShadow">Hide custom background shadow</string>
    <string name="SetSolidBGColor">Set background color</string>
    <string name="SolidBGColor">Background color</string>
    <string name="EmojiPopupSize">Emoji Popup size</string>
    <string name="ForwardRightNameColor">Forward right bubble name color</string>
    <string name="ForwardLeftNameColor">Forward left bubble name color</string>
    <string name="IconsColor">Icons color</string>
    <string name="SettingsScreen">Settings/Theming screen</string>
    <string name="BackgroundColor">Background Color</string>
    <string name="ShadowColor">Shadow Color</string>
    <string name="SectionColor">Section Color</string>
    <string name="TitleColor">Title Color</string>
    <string name="SummaryColor">Summary/Subtitle Color</string>
    <string name="MediaColor">\'Photo/Sticker\' text color</string>
    <string name="UseDeviceFont">Use device font</string>
    <string name="AppWillRestart">shangoolgram  will restart</string>
    <string name="GroupIconColor">Group icon color</string>
    <string name="SharedContactNameColor">Shared contact name color</string>
    <string name="AttachBGColor">Attach background color</string>
    <string name="AttachTextColor">Attach text color</string>
    <string name="ShowContactAvatar">Show contact avatar in chat screen</string>
    <string name="ShowOwnAvatar">Show own avatar in chat screen</string>
    <string name="ShowOwnAvatarGroup">Show own avatar in group screen</string>
    <string name="OwnAvatarAlignTop">Align own avatar to top</string>
    <string name="DialogColor">Dialog title/button color</string>
    <string name="ShowUsername">Show username with member name</string>
    <string name="DisableAudioStop">Don\'t stop audio</string>
    <string name="ListDividerColor">List divider color</string>
    <string name="CenterAvatar">Center avatar, name and phone</string>
    <string name="RowGradient">Gradient</string>
    <string name="RowGradientColor">Gradient color</string>
    <string name="OfficialChannel">Official channel</string>
    <string name="about_title_contact_us">Contact Us</string>
    <string name="about_comment">Rate Us ..</string>
    <string name="about_products">Other Apps</string>
    <string name="voiceChangerHelp">This feature works on Android above 5, so down version becomes inactive</string>
    <string name="helperr">Help</string>
    <string name="PleaseChooseyourmode">Please Choose your mode :</string>
    <string name="NormalMode">Normal Mode</string>
    <string name="ModeWrite1">Mode 1</string>
    <string name="ModeWrite2">Mode 2</string>
    <string name="ModeWrite3">Mode 3</string>
    <string name="ModeWrite4">Mode 4</string>
    <string name="ModeWrite5">Mode 5</string>
    <string name="editChangerHelp">You can change your text style after sending message</string>
    <string name="AppName">توت فرنگی گرام</string>
    <string name="Save">Save</string>
</resources>