<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ececec"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/cardview_light_background"

            >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="#edebec">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/text_01"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/voiceChangerHelp"
                        android:textColor="#454344" />


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/radio_group"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="10dp"
                            android:text="@string/PleaseChooseyourmode"
                            android:textColor="#454344" />

                        <RadioButton
                            android:id="@+id/radio_01"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"

                            android:gravity="center_horizontal"
                            android:text="@string/NormalMode"
                            android:textColor="#454344" />

                        <RadioButton
                            android:id="@+id/radio_02"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/ModeWrite1"
                            android:textColor="#8b1e740b" />

                        <RadioButton
                            android:id="@+id/radio_03"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/ModeWrite2"
                            android:textColor="#8f2f5f" />

                        <RadioButton
                            android:id="@+id/radio_04"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/ModeWrite3"
                            android:textColor="#46559f" />

                        <RadioButton
                            android:id="@+id/radio_05"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/ModeWrite4"
                            android:textColor="#a7a528" />

                        <RadioButton
                            android:id="@+id/radio_06"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/ModeWrite5"

                            android:textColor="#a14c2d" />
                    </RadioGroup>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/confvoice"
                    android:layout_width="match_parent"
                    android:minHeight="40dp"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                </LinearLayout>


                <Button
                    android:id="@+id/save_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="@color/primary_light"
                    android:gravity="center"
                    android:text="@string/Save"
                    android:textColor="#FFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

</RelativeLayout>
